[package]
name = "actask"
version = "0.1.0"
authors = ["Sergio Medina <lumasepa@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
async-std = { version = "1.4", features = ["default", "unstable"] }
thiserror = "1"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

